@@ -4,6 +4,9 @@ Next version
     in IG into constants in iglib.h which is now shared explicitly with the
     iglib.h in DOSLIB. Add integration device interface to allow the guest
     to read and set the CPU cycle count of the emulator. (joncampbell123).
+  - Fix INT 10h AH=0Eh bug where printing BEL triggered screen scroll up if
+    cursor beyond the last line. Fix for the Elder Scrolls Arena installer.
+    (joncampbell123).
 
 2025.05.03
   - Show TURBO status in title bar. (maron2000)
